# sates

./: .gitignore  LICENSE  README.md
codes/: sates.sln
codes/sates_core/: Program.cs  sates_core.csproj
codes/sates_core/algorithm/: fmea_critical_number.cs  fmea_rpn.cs  fmea_sod.cs  infogen.cs  infogen_manager.cs
codes/sates_core/core/: doc.cs  doc_factory.cs  doc_list.cs  doc_spec.cs  info.cs  os_setting.cs
codes/sates_core/input/: api_cmd.cs  api_cmd_json_parser.cs  (+3 more)
codes/sates_test_cpp/: CMakeLists.txt  CMakeSettings.json  main.cpp  sates_test_cpp.vcxproj  sates_test_cpp.vcxproj.filters
codes/sates_test_cpp/sates/: api_caller.cpp  api_caller.h  define.h  sates_test_cpp.h  sates_test_cpp_deploy.cpp  sates_test_cpp_deploy.h  test_macro.h  testcode.cpp  testcode.h  testcode_list.cpp  testcode_list.h
codes/sates_test_cpp/sates/internal_use/: common_func.cpp  common_func.h  test_list_editor.cpp  test_list_editor.h  test_log.cpp  test_log.h  test_runner.cpp  test_runner.h
codes/sates_test_cpp/sates/os/: constant.h  exec.h  exec_cmdline.cpp  exec_cmdline.h  mutex.h  signal_handler.h  signal_handler_common.cpp  sleep.h  stdout_color.h  tcp_client.h  thread.h
codes/sates_test_cpp/sates/os/linux/: exec.cpp  mutex.cpp  os_exec.cpp  os_mutex.cpp  os_singal_handler.cpp  os_sleep.cpp  os_stdout_color.cpp  os_thread.cpp  singal_handler.cpp  sleep.cpp  stdout_color.cpp  tcp_client.cpp  thread.cpp
codes/sates_test_cpp/sates/os/win/: exec.cpp  mutex.cpp  signal_handler.cpp  sleep.cpp  stdout_color.cpp  tcp_client.cpp  thread.cpp
codes/sates_test_cpp/sates/report/: reporter.h  reporter_factory.cpp  reporter_factory.h  reporter_local_json.cpp  reporter_local_json.h
codes/sates_test_cpp/sates/util/: string_transfer.cpp  string_transfer.h
codes/sates_test_cs/: api_caller.cs  sates_test_cs.csproj  sates_test_cs_deploy.cs  test_result_reporter_josn.cs  testcode.cs  testcode_instances.cs  testcode_list.cs
codes/test_sates_core/: Program.cs  common_data.cs  test_sates_core.csproj
deps_win/ReportGenerator/: ReportGenerator.exe.CodeAnalysisLog.xml
docs/: readme.md
docs/doxygen/: sates.chm
example/java_test/: Manifest.MF
resource/doxy/: sates_doxy  sates_doxy_chm  sates_doxy_html
resource/example/: SATES_DOC_EXAMPLE_CHILD.txt
scripts/centos/: 100_build.sh  200_testrun.sh  300_sates_java_build.sh  301_java_code_build.sh  302_java_test_build.sh  303_java_test_run.bat  900_dirty_file_del.sh
scripts/ubuntu/: 100_build.sh  200_testrun.sh  300_sates_java_build.sh  301_java_code_build.sh  302_java_test_build.sh  303_java_test_run.bat  900_dirty_file_del.sh
scripts/win/: 000_all.bat  100_build.bat  200_testrun.bat  210_cov_report_csharp.bat  300_sates_java_build.bat  301_java_code_build.bat  302_java_test_build.bat  303_java_test_run.bat  900_dirty_file_del.bat
(+1098 files in other folders)
